@startuml webserv
class ConfigParser {
  file_path: std::string

  ConfigParser(const char*)
  ParseConfigFile(std::string): std::map<int, std::vector<ServerConfig> >
  CreateServerConfig(std::vector<std::string>): ServerConfig
}

class ServerConfig {
  server_directive: std::vector<std::string>
  port: int
  host: std::string
  server_name: std::string
  error_page_path: std::string
  client_max_body_size: std::string
  vec_location_config: std::vector<LocationConfig>

  ServerConfig(std::vector<std::string>)
  ParseServerDirective(std::vector<std::string>): int
  CreateLocationConfig(std::vector<std::string>): LocationConfig
}

class LocationConfig {
  location_directive: std::vector<std::string>
  http_method: std::vector<string>
  proxy_pass: std::string
  root: std::string
  autoindex: bool
  index: std::vector<string>
  add_cgi_handler: std::vector<string>
  upload_file: bool
  upload_state_store: std::string

  LocationConfig(std::vector<std::string>)
  ParseLocationDirective(std::vector<std::string>): int
}

class HttpServer {
  map_server_config: std::map<int, std::vector<ServerConfig> >

  HttpServer(std::map<int, std::vector<ServerConfig> >)
  RunServer(): int
  InitSockets(): std::vector<Socket>
  HandleRequests(std::vector<Socket>): int
  ShutDownServer(): int
}

class Socket {
  port: int
  vec_server_config: std::vector<ServerConfig>
  accepted_fd: int

  Socket(int, std::vector<ServerConfig>)
  InitSocket(): int
  AcceptConnection(): int
  ReceiveRequest(): std::vector<std::string>
  InitHttpRequestParser(std::vector<std::string>): HttpRequestParser
  CreateHttpRequest(HttpRequestParser): HttpRequest
  HandleCgiRequest(HttpRequest): HttpResponse
  HandleNonCgiRequest(HttpRequest): HttpResponse
  SendResponse(HttpResponse): int
}

class HttpRequestParser {
  received_request: std::vector<std::string>

  HttpRequestParser(std::vector<std::string>)
  ParseRequest(): HttpRequest
}

class HttpMessage {
  version: std::string
  header: std::vector<std::string>
  body: std::vector<std::string>
}

class HttpRequest {
  method: std::string
  uri: std::string
  config: ServerConfig
}

class HttpResponse {
  status_code: int
  status_desc: std::string
}

class CgiHandler {
  http_request: HttpRequest
  ProcessRequest(HttpRequest): std::vector<std::string>
  ParseCgiResult(std::vector<std::string>): HttpResponse
}

ServerConfig "1" <--x "0,n" LocationConfig
ConfigParser "1" <--x "1..*" ServerConfig
HttpServer "1" <--x "1..*" ServerConfig
Socket "1" <--x "1..*" ServerConfig
HttpServer "1" <--x "1..*" Socket
HttpMessage <|-- HttpRequest
HttpMessage <|-- HttpResponse
Socket "1" <--x "1..*" HttpRequest
Socket "1" <--x "1..*" HttpResponse
HttpRequest "1" <--x "0,n" CgiHandler
CgiHandler "1" <--x "1" HttpResponse
Socket "1" <--x "1..*" HttpRequestParser
HttpRequestParser "1" <--x "1" HttpRequest
HttpRequest "1" <--x "1" ServerConfig

@enduml
